--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "angularx-qrcode": "^2.1.1",
     "cordova-android": "^8.1.0",
     "cordova-browser": "^6.0.0",
+    "cordova-ios": "^5.1.1",
     "cordova-plugin-androidx": "^1.0.2",
     "cordova-plugin-androidx-adapter": "^1.1.1",
     "cordova-plugin-barcodescanner": "^0.7.4",
