--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
     "@ionic/storage": "^2.2.0",
+    "@ngx-translate/core": "^12.1.2",
+    "@ngx-translate/http-loader": "^4.0.0",
     "angularx-qrcode": "^2.1.1",
     "cordova-android": "^8.1.0",
     "cordova-browser": "^6.0.0",
