--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "@angular/router": "~8.2.14",
     "@capacitor/android": "^2.1.0",
     "@capacitor/core": "^2.1.0",
-    "@ionic-native/barcode-scanner": "^5.26.0",
     "@ionic-native/camera": "^5.26.0",
     "@ionic-native/core": "^5.0.7",
     "@ionic-native/facebook": "^5.25.0",
@@ -39,7 +38,6 @@
     "cordova-ios": "^5.1.1",
     "cordova-plugin-androidx": "^1.0.2",
     "cordova-plugin-androidx-adapter": "^1.1.1",
-    "cordova-plugin-barcodescanner": "^0.7.4",
     "cordova-plugin-camera": "^4.1.0",
     "cordova-plugin-facebook4": "^6.4.0",
     "cordova-plugin-googleplus": "^8.4.0",
@@ -51,7 +49,6 @@
     "jetifier": "^1.6.5",
     "ngx-qrcode-svg": "^1.1.3",
     "ngx-qrcode2": "^9.0.0",
-    "phonegap-plugin-barcodescanner": "^8.1.0",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
@@ -102,10 +99,7 @@
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-camera": {},
       "cordova-plugin-androidx-adapter": {},
-      "cordova-plugin-androidx": {},
-      "phonegap-plugin-barcodescanner": {
-        "ANDROID_SUPPORT_V4_VERSION": "27.+"
-      }
+      "cordova-plugin-androidx": {}
     },
     "platforms": [
       "browser",
