--- a/package.json
+++ b/package.json
@@ -20,11 +20,12 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
+    "@babel/compat-data": "^7.8.0",
     "@capacitor/android": "^2.1.0",
     "@capacitor/core": "^2.1.0",
     "@ionic-native/camera": "^5.26.0",
     "@ionic-native/core": "^5.0.7",
-    "@ionic-native/facebook": "^5.25.0",
+    "@ionic-native/facebook": "^5.26.0",
     "@ionic-native/google-plus": "^5.25.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
@@ -39,9 +40,8 @@
     "cordova-plugin-androidx": "^1.0.2",
     "cordova-plugin-androidx-adapter": "^1.1.1",
     "cordova-plugin-camera": "^4.1.0",
-    "cordova-plugin-facebook4": "^6.4.0",
     "cordova-plugin-googleplus": "^8.4.0",
-    "cordova-res": "^0.14.0",
+    "cordova-res": "^0.14.1",
     "core-js": "^2.5.4",
     "crypto-js": "^4.0.0",
     "firebase": "^7.14.3",
@@ -54,7 +54,7 @@
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.20",
+    "@angular-devkit/build-angular": "^0.803.24",
     "@angular/cli": "~8.3.23",
     "@angular/compiler": "~8.2.14",
     "@angular/compiler-cli": "~8.2.14",
