--- a/package.json
+++ b/package.json
@@ -25,27 +25,31 @@
     "@capacitor/core": "^2.1.0",
     "@ionic-native/camera": "^5.26.0",
     "@ionic-native/core": "^5.0.7",
-    "@ionic-native/facebook": "^5.26.0",
+    "@ionic-native/facebook": "^5.15.1",
     "@ionic-native/google-plus": "^5.25.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
+    "@ionic/cli": "^6.10.1",
     "@ionic/storage": "^2.2.0",
     "@ngx-translate/core": "^12.1.2",
     "@ngx-translate/http-loader": "^4.0.0",
     "angularx-qrcode": "^2.1.1",
     "cordova-android": "^8.1.0",
     "cordova-browser": "^6.0.0",
-    "cordova-ios": "^5.1.1",
+    "cordova-ios": "^6.0.0",
     "cordova-plugin-androidx": "^1.0.2",
     "cordova-plugin-androidx-adapter": "^1.1.1",
     "cordova-plugin-camera": "^4.1.0",
+    "cordova-plugin-cocoapod-support": "^1.6.2",
+    "cordova-plugin-facebook4": "^6.2.0",
     "cordova-plugin-googleplus": "^8.4.0",
     "cordova-res": "^0.14.1",
     "core-js": "^2.5.4",
     "crypto-js": "^4.0.0",
     "firebase": "^7.14.3",
     "ion-custom-form-builder": "0.0.25",
+    "ios-deploy": "^1.10.0",
     "jetifier": "^1.6.5",
     "ngx-qrcode-svg": "^1.1.3",
     "ngx-qrcode2": "^9.0.0",
@@ -89,7 +93,7 @@
     "plugins": {
       "cordova-plugin-googleplus": {
         "REVERSED_CLIENT_ID": "com.googleusercontent.apps.70700975268-b6bejr2iemokut30kkil8ss7eo160p4c",
-        "WEB_APPLICATION_CLIENT_ID": "70700975268-0776l6ndt1m5hpccbjrvp6q7id7qf7j5.apps.googleusercontent.com"
+        "WEB_APPLICATION_CLIENT_ID": "70700975268-b6bejr2iemokut30kkil8ss7eo160p4c.apps.googleusercontent.com"
       },
       "cordova-plugin-whitelist": {},
       "cordova-plugin-statusbar": {},
@@ -99,11 +103,16 @@
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-camera": {},
       "cordova-plugin-androidx-adapter": {},
-      "cordova-plugin-androidx": {}
+      "cordova-plugin-androidx": {},
+      "cordova-plugin-facebook4": {
+        "APP_ID": "584951719072295",
+        "APP_NAME": "ionic.myselfHotel"
+      }
     },
     "platforms": [
       "browser",
-      "android"
+      "android",
+      "ios"
     ]
   }
 }
