--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@ngx-translate/core": "^12.1.2",
     "@ngx-translate/http-loader": "^4.0.0",
     "angularx-qrcode": "^2.1.1",
+    "capacitor-apple-login": "git+https://github.com/rlfrahm/capacitor-apple-login.git",
     "capacitor-resources": "^2.0.3",
     "cordova-android": "^9.0.0",
     "cordova-browser": "^6.0.0",
@@ -61,7 +62,7 @@
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.803.24",
+    "@angular-devkit/build-angular": "^0.1000.5",
     "@angular/cli": "~8.3.23",
     "@angular/compiler": "~8.2.14",
     "@angular/compiler-cli": "~8.2.14",
