--- a/ios/App/Podfile
+++ b/ios/App/Podfile
@@ -10,13 +10,14 @@ def capacitor_pods
   # Automatic Capacitor Pod dependencies, do not delete
   pod 'Capacitor', :path => '../../node_modules/@capacitor/ios'
   pod 'CapacitorCordova', :path => '../../node_modules/@capacitor/ios'
+  pod 'CapacitorAppleLogin', :path => '../../node_modules/capacitor-apple-login'
   pod 'CordovaPlugins', :path => '../capacitor-cordova-ios-plugins'
   pod 'CordovaPluginsStatic', :path => '../capacitor-cordova-ios-plugins'
   pod 'CordovaPluginsResources', :path => '../capacitor-cordova-ios-plugins'
   # Do not delete
 end
 
-target 'App' do
+target 'myselfHotel App' do
   capacitor_pods
   # Add your Pods here
 end
